--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -3,10 +3,11 @@
 name="Windows Desktop"
 platform="Windows Desktop"
 runnable=true
+advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="scenes"
-export_files=PackedStringArray("res://Prefabs/CrystalFaceSpinBox.tscn", "res://Prefabs/Crystal.tscn", "res://GUI.tscn", "res://Main.tscn")
+export_files=PackedStringArray("res://Prefabs/CrystalFaceSpinBox.tscn", "res://GUI.tscn", "res://Main.tscn")
 include_filter=""
 exclude_filter=""
 export_path="../Export/CrystalViewerWin.exe"
@@ -14,6 +15,7 @@ encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
 encrypt_directory=false
+script_export_mode=2
 
 [preset.0.options]
 
@@ -21,10 +23,8 @@ custom_template/debug=""
 custom_template/release=""
 debug/export_console_wrapper=1
 binary_format/embed_pck=false
-texture_format/bptc=true
-texture_format/s3tc=false
-texture_format/etc=false
-texture_format/etc2=false
+texture_format/s3tc_bptc=true
+texture_format/etc2_astc=false
 binary_format/architecture="x86_64"
 codesign/enable=false
 codesign/timestamp=true
@@ -44,6 +44,8 @@ application/file_description=""
 application/copyright=""
 application/trademarks=""
 application/export_angle=0
+application/export_d3d12=0
+application/d3d12_agility_sdk_multiarch=true
 ssh_remote_deploy/enabled=false
 ssh_remote_deploy/host="user@host_ip"
 ssh_remote_deploy/port="22"
@@ -64,22 +66,28 @@ Remove-Item -Recurse -Force '{temp_dir}'"
 dotnet/include_scripts_content=false
 dotnet/include_debug_symbols=false
 dotnet/embed_build_outputs=false
+texture_format/bptc=true
+texture_format/s3tc=false
+texture_format/etc=false
+texture_format/etc2=false
 
 [preset.1]
 
 name="Linux/X11"
-platform="Linux/X11"
+platform="Linux"
 runnable=true
+advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../Export/CrystalViewerLinux86_64.x86_64"
+export_path="../Export/CrystalViewerLinux/CrystalViewerLinux86_64.x86_64"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
 encrypt_directory=false
+script_export_mode=2
 
 [preset.1.options]
 
@@ -87,10 +95,8 @@ custom_template/debug=""
 custom_template/release=""
 debug/export_console_wrapper=1
 binary_format/embed_pck=true
-texture_format/bptc=true
-texture_format/s3tc=true
-texture_format/etc=false
-texture_format/etc2=false
+texture_format/s3tc_bptc=true
+texture_format/etc2_astc=false
 binary_format/architecture="x86_64"
 ssh_remote_deploy/enabled=false
 ssh_remote_deploy/host="user@host_ip"
@@ -107,3 +113,7 @@ rm -rf \"{temp_dir}\""
 dotnet/include_scripts_content=false
 dotnet/include_debug_symbols=false
 dotnet/embed_build_outputs=false
+texture_format/bptc=true
+texture_format/s3tc=true
+texture_format/etc=false
+texture_format/etc2=false
